--- a/_config.yml
+++ b/_config.yml
@@ -14,19 +14,19 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Uncertainty Quantification for ML # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Explainers for various Uncertainty Quantification techniques # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Uncertainty Quantification for ML with interactive examples
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://jjmossel.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: jjmossel # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
@@ -34,7 +34,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: Jorn Mossel
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
